--- a/formularze/index.html
+++ b/formularze/index.html
@@ -18,7 +18,7 @@
       </label>
       <p class="author__Book-validation validation hidden">pole jest wymagane</p>
       <label for="reading__priority">Priorytet przeczytania
-        <input type="number" class="reading__priority" id="reading__priority">
+        <input type="text" class="reading__priority" id="reading__priority">
       </label>
       <p class="reading__priority-validation validation hidden">pole jest wymagane</p>
       <label for="books__select">Listę z kategoriami
